fix: issue with 100vh on iOS

--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -15,3 +15,9 @@
     padding: 8px;
   }
 }
+
+@supports (-webkit-touch-callout: none) {
+  .main {
+    height: 100%;
+  }
+}
